--- a/en/s/stiff upper lip.803114.wikitext
+++ b/en/s/stiff upper lip.803114.wikitext
@@ -4,6 +4,9 @@
 ===Etymology===
 American in origin; earliest known use in 1815.[https://books.google.com/books?id=mZASAAAAIAAJ&pg=PA509&dq=%22stiff+upper+lip%22]
 
+===Pronunciation===
+* {{audio|En-au-stiff upper lip.ogg|Audio (AU)|lang=en}}
+
 ===Noun===
 {{en-noun}}
 
