--- a/en/m/maiden voyage.745833.wikitext
+++ b/en/m/maiden voyage.745833.wikitext
@@ -17,11 +17,12 @@ See {{m|en|maiden}}, adjective.
 * Finnish: {{t+|fi|neitsytmatka}}
 * French: {{t+|fr|voyage inaugural}}
 * German: {{t+|de|Jungfernfahrt|f}}
-{{trans-mid}}
 * Indonesian: Perjalanan Perdana
+{{trans-mid}}
 * Italian: {{t|it|viaggio inaugurale|m}}
 * Japanese: {{t|ja|処女航海|tr=shojo kōkai}}
 * Korean: {{t-needed|ko}}
 * Spanish: {{t|es|viaje inaugural|m}}
+* Swedish: {{t+|sv|jungfrufärd|c}}, {{t+|sv|jungfruresa|c}}
 * Thai: {{t-needed|th}}
 {{trans-bottom}}
