--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -6,6 +6,7 @@ From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mig
 
 ===Pronunciation===
 * {{IPA|/ˈmɛɡə/|lang=en}}
+* {{audio|En-au-mega.ogg|Audio (AU)|lang=en}}
 * {{rhymes|ɛɡə|lang=en}}
 
 ===Adjective===
