--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -4,6 +4,9 @@
 ===Etymology===
 From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{inh|en|ang|hwistlere|t=a player on a flute; a piper}}, equivalent to {{suffix|en|whistle|er}}.
 
+===Pronunciation===
+* {{audio|En-au-whistler.ogg|Audio (AU)|lang=en}}
+
 ===Noun===
 {{wikipedia}}
 {{en-noun}}
