--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -16,9 +16,9 @@ From {{inh|en|enm|dudde|t=cloak, mantle, kind of cloth; ragged clothing or cloth
 # {{lb|en|informal}} A [[failure]] of any kind.
 #* '''2014''', A teacher, "[http://www.theguardian.com/education/2014/sep/23/choosing-primary-school-guide-teachers-guide-for-parents Choosing a primary school: a teacher's guide for parents]", ''The Guardian'', 23 September 2014:
 #*: At the end of the day, the vast majority of primary schools are vibrant, friendly places and you may struggle to choose one because they all seem so great. Primary schools tend to have the feelgood factor. If you just aren't feeling it, this one's probably a '''dud'''.
-# A [[lottery]] ticket that does not give a payout.
+## {{lb|en|informal}} A [[loser]]; an [[unlucky]] person.
+## A [[lottery]] ticket that does not give a payout.
 # {{lb|en|obsolete|informal}} Clothes, now always used in plural form {{m|en|duds}}.
-# A [[loser]], an unlucky person
 
 ====Synonyms====
 * {{sense|losing lottery ticket}} {{l|en|blank}}
