--- a/en/b/bare-butt.741632.wikitext
+++ b/en/b/bare-butt.741632.wikitext
@@ -7,6 +7,9 @@
 ===Etymology===
 {{compound|en|bare|t1=naked|butt|t2=bottom}}.
 
+===Pronunciation===
+* {{audio|En-au-bare-butt.ogg|Audio (AU)|lang=en}}
+
 ===Adjective===
 {{en-adj|-}}
 
