--- a/en/w/whatevs.803477.wikitext
+++ b/en/w/whatevs.803477.wikitext
@@ -8,6 +8,9 @@
 ===Etymology===
 From {{suffix|en|whatever|s}}
 
+===Pronunciation===
+* {{audio|En-au-whatevs.ogg|Audio (AU)|lang=en}}
+
 ===Interjection===
 {{en-interj}}
 
