--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -121,7 +121,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * Cherokee: {{t|chr|ᎠᏏᏇ}}
 * Chinese:
 *: Dungan: {{t|dng|зэ}}, {{t|dng|ю}}
-*: Mandarin: {{qualifier|of future events}} {{t+|cmn|再|tr=zài}}, {{qualifier|of past events}} {{t+|cmn|又|tr=yòu}}, {{qualifier|once again}} {{t+|cmn|遍|alt=再...一遍|tr=zai4... yíbiàn}}, {{t+|cmn|重新|tr=chóngxīn}}
+*: Mandarin: {{qualifier|of future events}} {{t+|cmn|再|tr=zài}}, {{qualifier|of past events}} {{t+|cmn|又|tr=yòu}}, {{qualifier|once again}} {{t+|cmn|遍|alt=再……一遍|tr=zai4... yíbiàn}}, {{t+|cmn|重新|tr=chóngxīn}}
 * Chukchi: {{t|ckt|нэмэ|tr=nėmė}}
 * Crimean Tatar: {{t|crh|kene}}
 * Czech: {{t+|cs|zase}}, {{t+|cs|opět}}, {{t|cs|znova}}
@@ -150,7 +150,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * Japanese: {{t+|ja|又|tr=mata}}, {{t+|ja|また|tr=mata}}, {{t+|ja|再び|tr=ふたたび, futatabi}}, {{t|ja|もう一度|tr=mō ichido}}, {{t+|ja|あらためて|tr=aratamete}}
 * Kannada: {{t-needed|kn}}
 * Kazakh: {{t|kk|қайтадан}}, {{t+|kk|жаңа}}, {{t|kk|қайта}}, {{t|kk|жаңадан}}, {{t|kk|тағы}}
-* Khmer: {{t+|km|ទៀត|tr=dtīət}}, {{t|km|ម្ដងទៀត|tr=mdorng dtīət}}
+* Khmer: {{t+|km|ទៀត}}, {{t|km|ម្ដងទៀត}}
 * Korean: {{t+|ko|다시}}, {{t+|ko|또}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|دیسان}}, {{t|ckb|هه‌مدیس}}, {{t|ckb|دوباره}}
