--- a/en/d/due course.801536.wikitext
+++ b/en/d/due course.801536.wikitext
@@ -4,7 +4,7 @@
 * {{audio|en-au-due course.ogg|Audio (AU)|lang=en}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|-|s}}
 
 # {{lb|en|idiomatic}} Regular or appropriate passage or occurrence
 #* ''a''. '''1399''', Geoffrey Chaucer, ''The Canterbury Tales''
@@ -12,10 +12,10 @@
 #* '''1590''', William Shakespeare, ''The Winter's Tale''
 #*: Let us be cleared / Of being tyrannous, since we so openly / Proceed in justice, which shall have '''due course''', / Even to the guilt or the purgation.
 #* {{RQ:Swift Gulliver|IV|XII}}
-#*: This is all according to the '''due Course''' of Things: […].
+#*: This is all according to the '''due Course''' of Things: {{...}}
 #* ''a''. '''1803''', Jane Austen, ''Northanger Abbey''
-#*: […] but it did not oppress them by any means so long; and, after a '''due course''' of useless conjecture, that “it was a strange business, and that he must be a very strange man,” grew enough for all their indignation and wonder; […].
-#* {{quote-text|lang=en|year=1898|author=Justin McCarthy|title=The Story of Gladstone's Life|page=27|passage=The Reform Bill, although the Duke of Wellington described it as " a revolution by '''due course''' of law," set up in fact but a very limited suffrage, [....]}}
+#*: {{...}} but it did not oppress them by any means so long; and, after a '''due course''' of useless conjecture, that “it was a strange business, and that he must be a very strange man,” grew enough for all their indignation and wonder; {{...}}
+#* {{quote-text|lang=en|year=1898|author=Justin McCarthy|title=The Story of Gladstone's Life|page=27|passage=The Reform Bill, although the Duke of Wellington described it as " a revolution by '''due course''' of law," set up in fact but a very limited suffrage, {{...}} ]}}
 
 ====Quotations====
 * {{seeCites}}
