--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -96,6 +96,7 @@ From {{inh|en|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}} {{m|fro|e
 * Ido: {{t+|io|skurelo}}
 * Indonesian: {{t+|id|bajing}}, {{t+|id|tupai}}
 * Interlingua: {{t|ia|sciuro}}, {{t|ia|scuriolo}}
+* Interlingue: {{t|ie|scurel}}
 * Irish: {{t|ga|iora|m}}, {{t|ga|madra crainn|m}}
 * Isthmus Zapotec: {{t|zai|chisa}}
 * Italian: {{t+|it|scoiattolo|m}}
