--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -4,7 +4,10 @@
 ===Symbol===
 {{head|mul|symbol}}
 
-# The [[ISO]] 3166-1 two-letter (alpha-2) code for [[Federated States of Micronesia]].
+# [[Federated States of Micronesia]].
+
+====Usage notes====
+* This is the [[ISO]] 3166-1 two-letter (alpha-2) code.
 
 [[Category:ISO 3166-1]]
 
