--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -24,7 +24,7 @@
 #* {{quote-text|lang=en|year=1895|author={{w|Kenneth Grahame}}|title=The Golden Age|chapter=13|passage=What a strange thing, I mused, was this smoking, that takes a man suddenly, be he in the court, the camp, or the grove, grips him like an Afreet, and whirls him off to do its imperious behests! Would it be '''even so''' with myself, I wondered, in those unknown grown-up years to come?}}
 
 ====Synonyms====
-* {{sense|in spite of the preceding remark or facts}} {{l|en|nevertheless}}
+* {{sense|in spite of the preceding remark or facts}} {{l|en|be that as it may}}, {{l|en|nevertheless}}, {{l|en|withal}}; see also [[Thesaurus:nevertheless]]
 
 ====Translations====
 {{trans-top|in spite of the preceding remark or facts}}
