--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -25,7 +25,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 # A manufacturing plant for paper, steel, textiles, etc.
 #: {{ux|en|a steel '''mill'''}}
 # A building housing such a plant.
-# {{lb|en|figurative}} An establishment that handles a certain type of situation routinely, such as a divorce mill, etc.
+# {{lb|en|figurative}} An establishment that handles a certain type of situation or procedure routinely, or produces large quantities of an item without much regard to quality, such as a divorce mill, a puppy mill, etc.
 # {{lb|en|figurative|derogatory}} An institution awarding educational certificates not officially recognised
 # {{lb|en|informal}} An [[engine]].<!--{{R:ODO}}-->
 # {{lb|en|informal}} A boxing match, [[fistfight]].<!--{{R:ODO}}-->
@@ -76,6 +76,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 |paper mill
 |pecker mill
 |pulp mill
+|puppy mill
 |rice mill
 |rolling mill
 |run-of-the-mill
