--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -44,6 +44,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 {{trans-mid}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|مەرج}}, {{t|ckb|گِرێو}}
+* Latin: {{t|la|sponsiō|f}}
 * Latvian: {{t+|lv|likme|f}}, {{t|lv|derības|f-p}}
 * Maltese: {{t|mt|mħatra}}
 * Norman: {{t|nrf|gageaille|f}}
