--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -145,6 +145,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * Ido: {{t+|io|itere}}, {{t+|io|ankorfoye}}
 * Indonesian: {{t+|id|lagi}}
 * Interlingua: {{t|ia|de novo}}
+* Interlingue: {{t|ie|denov}}, {{t|ie|ancor un vez}}
 * Irish: {{t+|ga|arís}}, {{t|ga|athuair}}
 * Italian: {{t+|it|di nuovo}}, {{t+|it|ancora}}
 * Japanese: {{t+|ja|又|tr=mata}}, {{t+|ja|また|tr=mata}}, {{t+|ja|再び|tr=ふたたび, futatabi}}, {{t|ja|もう一度|tr=mō ichido}}, {{t+|ja|あらためて|tr=aratamete}}
