--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -98,7 +98,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Galician: {{t|gl|asistir}}, {{t|gl|percurar}}
 * German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
 * Greek: {{t|el|παραβρίσκομαι|sc=Grek}}, {{t+|el|παρευρίσκομαι|sc=Grek}}, {{t+|el|παρίσταμαι|sc=Grek}}
-* Hungarian: {{t+|hu|eljár}}, {{t+|hu|jár}}, {{t+|hu|részt vesz}}
+* Hungarian: {{t+|hu|részt vesz}}
 * Ido: {{t+|io|asistar}}
 * Interlingue: {{t|ie|assister}}
 {{trans-mid}}
@@ -122,6 +122,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Finnish: {{t+|fi|käydä}}
 * Greek:
 *: Ancient: {{t|grc|φοιτάω}} {{qualifier|school}}
+* Hungarian: {{t+|hu|jár}}, {{t+|hu|eljár}}
 {{trans-mid}}
 * Interlingue: {{t|ie|frequentar}}
 * Portuguese: {{t+|pt|frequentar}}
