--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -21,14 +21,14 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Chinese:
 *: Mandarin: {{t+|cmn|嘎|tr=gá}}, {{t+|cmn|呱|tr=guā}}
 * Danish: {{t+|da|rap|n}}
-* Dutch: {{t+|nl|kwak}}
+* Dutch: {{t+|nl|kwak|?}}
 * Estonian: {{t+|et|prääks}}
-* Faroese: {{t|fo|gvagg}}, {{t|fo|kvagg}}
+* Faroese: {{t|fo|gvagg|?}}, {{t|fo|kvagg|?}}
 * Finnish: {{t|fi|kvaak}}
-* French: {{t+|fr|coin-coin}}
+* French: {{t+|fr|coin-coin|?}}
 * Georgian: {{t|ka|ყიყინი}}
 * German: {{t|de|Quaken|n}}
-* Greek: {{t|el|πα πα}} (pa pa)
+* Greek: {{t|el|πα πα|?}}
 * Hungarian: {{t|hu|háp}}, {{t|hu|hápogás}}
 * Icelandic: {{t|is|andagagg|n}}, {{t|is|guss|n}}
 * Ido: {{t+|io|kroaso}}, {{t+|io|bramo}}
@@ -36,21 +36,21 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Italian: {{t|it|qua qua|m}}
 {{trans-mid}}
 * Japanese: {{t|ja|ガー ガー|tr=gā-gā}}, {{t|ja|クェッ クェッ|tr=quek-quek}}, {{t|ja|クワッ クワッ|tr=quwak-quwak}}
-* Macedonian: {{t|mk|квак|tr=kvák}}
+* Macedonian: {{t|mk|ква́к|?}}
 * Malay: {{t|ms|wak}}
 * Maori: {{t|mi|keakea}}, {{t|mi|kēkē}}
-* Norwegian: {{t|no|kvakk}}
-* Polish: {{t+|pl|kwa}}
+* Norwegian: {{t|no|kvakk|?}}
+* Polish: {{t+|pl|kwa|?}}
 * Portuguese: {{t|pt|quac|m}}
-* Romanian: {{t+|ro|mac}}, {{t|ro|mac-mac}}, {{t+|ro|măcăit|n}}, {{t+|ro|măcănit|n}}, {{t+|ro|măcăitură|f}}
-* Russian: {{t|ru|кря-кря}}, {{t+|ru|кря́канье|n}}
+* Romanian: {{t+|ro|mac|?}}, {{t|ro|mac-mac|?}}, {{t+|ro|măcăit|n}}, {{t+|ro|măcănit|n}}, {{t+|ro|măcăitură|f}}
+* Russian: {{t|ru|кря-кря|?}}, {{t+|ru|кря́канье|n}}
 * Spanish: {{t+|es|cuac|m}}
 * Swedish: {{t+|sv|kvack|n}}
 * Tagalog: {{t|tl|kwak-kwak}}
 * Thai: {{t|th|ก้าบ}}
 * Turkish: {{t+|tr|vak}}
 * Vietnamese: {{t|vi|cạc cạc}}
-* Welsh: {{t|cy|cwac}}
+* Welsh: {{t|cy|cwac|?}}
 {{trans-bottom}}
 
 ====Verb====
@@ -61,13 +61,15 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 #: {{ux|en|Do you hear the ducks '''quack'''?}}
 
 =====Derived terms=====
-* {{l|en|quack like a duck‎}}
-* {{l|en|quacky}}
+{{col2|en
+|quack like a duck
+|quacky
+}}
 
 =====Translations=====
 {{trans-top|to make a noise like a duck}}
 * Arabic: {{t|ar|زَبَطَ}}
-*: Egyptian Arabic: {{t|arz|يكاكي|tr=yekaaki|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|يكاكي|tr=yekaaki}}
 * Assamese: {{t|as|পেঁক পেঁকোৱা}}
 * Czech: {{t|cs|káchat}}
 * Danish: {{t|da|rappe}}
@@ -99,7 +101,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 <references/>
 
 ===Etymology 2===
-{{clipping|en|quacksalver}}, from {{der|en|dum|kwaksalver||hawker of salve}} (modern {{cog|nl|kwakzalver}}), from {{m|dum|quacken||to brag, boast; to croak}}. Ultimately related to etymology one, above.
+{{clipping|en|quacksalver}}, from {{der|en|dum|kwaksalver|t=hawker of salve}} (modern {{cog|nl|kwakzalver}}), from {{m|dum|quacken|t=to brag, boast; to croak}}. Ultimately related to etymology one, above.
 
 ====Noun====
 {{en-noun}}
@@ -124,14 +126,16 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * ''See also'' [[Thesaurus:deceiver]]
 
 =====Derived terms=====
-* {{l|en|quackery}}
-* {{l|en|quackhood}}
-* {{l|en|quacky}}
+{{col3|en
+|quackery
+|quackhood
+|quacky
+}}
 
 =====Translations=====
 {{trans-top|fraudulent or incompetent doctor of medicine}}
 * Chinese:
-*: Mandarin: {{t+|cmn|庸醫|sc=Hani}}, {{t+|cmn|庸医|tr=yōngyī|sc=Hani}}
+*: Mandarin: {{t+|cmn|庸醫}}, {{t+|cmn|庸医|tr=yōngyī}}
 * Danish: {{t|da|kvaksalver|c}}
 * Dutch: {{t+|nl|kwakzalver|m}}, {{t|nl|kwakzalfster|f}}
 * Estonian: {{t|et|imearst}}
@@ -139,7 +143,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * French: {{t+|fr|charlatan|m}}, {{t+|fr|charlatane|f}}
 * Georgian: {{t|ka|ექიმბაში}}
 * German: {{t+|de|Quacksalber|m}}, {{t+|de|Quacksalberin|f}}, {{t+|de|Kurpfuscher|m}}, {{t|de|Kurpfuscherin|f}}, {{t|de|Medikaster|m}} {{qualifier|obsolete}}, {{t|de|Medikasterin|f}} {{qualifier|obsolete}}, {{t|de|Medizinalpfuscher|m}} {{qualifier|obsolete}}, {{t|de|Medizinalpfuscherin|f}} {{qualifier|obsolete}}, {{t|de|Medizinalstorger|m}} {{qualifier|obsolete}}, {{t|de|Medizinalstorgerin|f}} {{qualifier|obsolete}}, {{t|de|Wunderdoktor|m}}, {{t|de|Wunderdoktorin|f}}, {{t|de|Afterarzt|m}} {{qualifier|obsolete}}, {{t|de|Afterärztin|f}} {{qualifier|obsolete}}
-* Greek: {{t+|el|κομπογιαννίτης|m}} (kompoyannítis), {{t+|el|αλμπάνης|m}} (albánis)
+* Greek: {{t+|el|κομπογιαννίτης|m}}, {{t+|el|αλμπάνης|m}}
 * Hungarian: {{t+|hu|kuruzsló}}
 * Icelandic: {{t+|is|skottulæknir|m}}
 * Ido: {{t+|io|sharlatano}}, {{t|io|medikacho}}
@@ -147,7 +151,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Italian: {{t+check|it|ciarlatano|m}}, {{t-check|it|[[medico]] [[empirico]]|m}} <!-- was "[[medico]] [[empirico]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 {{trans-mid}}
 * Japanese: {{t|ja|やぶ医者|tr=yabuisha}}, {{t|ja|もぐりの医者|tr=moguri no isha|sc=Jpan}}
-* Norman: {{t|nrf|dgéthisseux|m}}
+* Norman: {{t|nrf|dgéthisseux|m}} {{q|Jersey}}
 * Norwegian:
 *: Bokmål: {{t|nb|kvakksalver|m}}
 *: Nynorsk: {{t|nn|kvakksalvar|m}}
@@ -186,7 +190,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 {{trans-top|doctor}}
 * French: {{t+|fr|toubib|m}}
 * Ido: {{t+|io|sharlatano}}
-* Italian: {{t|it|mediconzolo}}
+* Italian: {{t|it|mediconzolo|m}}
 {{trans-mid}}
 * Polish: {{t+|pl|medyk|m-pr}}
 * Portuguese: {{t+|pt|curandeiro|m}}
