--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -129,7 +129,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * Gujarati: {{t|gu|છેતરપિંડી|f|tr=chētarapiṇḍī|sc=Gujr}}, {{t|gu|બબલ|f|tr=babala|sc=Gujr}}
 * Hausa: {{t|ha|kumfa}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
-* Hindi: {{t+|hi|बुलबुला|m}}, {{t+|hi|बुल्ला|m|tr=bullā|sc=Deva}}, {{t+|hi|बुदबुदा|m}}, {{t+|hi|फफोला|m}}, 
+* Hindi: {{t+|hi|बुलबुला|m}}, {{t+|hi|बुल्ला|m|tr=bullā|sc=Deva}}, {{t+|hi|बुदबुदा|m}}, {{t+|hi|फफोला|m}},
 * Hungarian: {{t+|hu|buborék}}
 * Icelandic: {{t+|is|kúla|f}}
 * Ido: {{t+|io|bulo}}
@@ -306,12 +306,10 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 
 # {{lb|en|intransitive}} To produce bubbles, to rise up in bubbles (such as in foods cooking or liquids boiling).
 # {{lb|en|intransitive|figurative}} To churn or foment, as if wishing to rise to the surface.
-#* '''1853''', Elizabeth Cleghorn Gaskell, ''Ruth''
-#*: The blood '''bubbled''' up to her brain, and made such a sound there, as of boiling waters, that she did not hear the words which Mr. Bradshaw first spoke {{...}}
+#* {{quote-book|en|year=1853|author=Elizabeth Cleghorn Gaskell|title=Ruth|passage=The blood '''bubbled''' up to her brain, and made such a sound there, as of boiling waters, that she did not hear the words which Mr. Bradshaw first spoke {{...}}}}
 #: ''Rage '''bubbled''' inside him.''
 # {{lb|en|intransitive|figurative}} To [[rise]] through a medium or system, similar to the way that bubbles rise in liquid.
-#* '''2002''', David Flanagan, ''JavaScript: the definitive guide''
-#*: The target of this event is the most deeply nested common ancestor of all changes that occurred in the document, and it '''bubbles''' up the document tree {{...}}
+#* {{quote-book|en|year=2002|author=David Flanagan|title=JavaScript: the definitive guide|passage=The target of this event is the most deeply nested common ancestor of all changes that occurred in the document, and it '''bubbles''' up the document tree {{...}}}}
 # {{lb|en|transitive|archaic}} To [[cheat]], [[delude]].
 #* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1973, p. 443:
 #*: No, no, friend, I shall never be '''bubbled''' out of my religion in hopes only of keeping my place under another government {{...}}
@@ -322,7 +320,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 # {{lb|en|intransitive|Scotland|and|Northern England}} To [[cry]], [[weep]].
 # {{lb|en|transitive}} To [[pat]] a [[baby]] on the [[back]] so as to cause it to [[belch]].
 #* '''1942''', ''McCall’s'', volume 69, page 94:
-#*: Groggily her mind went back through the long hours to 10 P.M. She had fed Junior, '''bubbled''' him, diped him—according to plan. 
+#*: Groggily her mind went back through the long hours to 10 P.M. She had fed Junior, '''bubbled''' him, diped him—according to plan.
 #* '''1957''', Conrad Nicholson Hilton, ''Be My Guest'', page 52:
 #*: I walked him, pushed him, pulled him, and “'''bubbled'''” him, drawing the line at changing him, and found that the ability to bring actual happiness to another being’s face, even such a small red one, simply by walking into the room, made me feel ten feet tall.
 #* '''1958''', David Mordecai Levy, ''Behavioral analysis: analysis of clinical observations of behavior as applied to mother-newborn relationships'', page 358:
@@ -336,22 +334,22 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 #*: The frothing sensation '''bubbled''' him all over, a boiling without heat or any sound or light.
 # {{lb|en|transitive}} To [[express]] in a [[bubbly]] or [[lively]] [[manner]].
 #* '''1924''', Stella Benson, ''Pipers and a Dancer'', page 14:
-#*: Mrs. Hinds beamed at Ipsie through pince-nez and '''bubbled''' her joy through thin lips, but Ipsie made no reply. 
+#*: Mrs. Hinds beamed at Ipsie through pince-nez and '''bubbled''' her joy through thin lips, but Ipsie made no reply.
 #* '''1934''', Inez Haynes Gillmore, ''Strange Harvest'', page 417:
-#*: Delighted with this promenade, little Edith '''bubbled''' her joy without cessation. 
+#*: Delighted with this promenade, little Edith '''bubbled''' her joy without cessation.
 #* '''1999''', Mollie Molay, ''Daddy by Christmas'', page 106:
 #*: “She’s a little girl like me,” Beth '''bubbled'''. “Her name is Buttons, ’cause she has a small nose. And she has a twin, too, just like me. Only my twin’s name is Carly.”
 #* '''2008''', Douglas Allen Rhodes, ''Sex and Murder'', page 55:
 #*: Rachel '''bubbled''' her thanks and brushed past the Reverend, me in tow.
 #* '''2012''', Andre Paul Goddard, ''The Blue Basin'', page 414:
-#*: But Ms. Loomat, far from a negative reaction, '''bubbled''' her joy at the news even congratulating Ms Lee on her acquisition. 
+#*: But Ms. Loomat, far from a negative reaction, '''bubbled''' her joy at the news even congratulating Ms Lee on her acquisition.
 # {{lb|en|transitive}} To form into a [[protruding]] [[round]] [[shape]].
 #* '''1929''', ''The Saturday Evening Post'', volume 201, page 50:
 #*: She '''bubbled''' her lips at Junior and wrinkled her eyes.
 #* '''1978''', Poul Anderson, ''The Night Face and Other Stories'', page 159:
 #*: She hasn’t '''bubbled''' her lips yet, has she?
 #* '''2005''', Tracy Daugherty, ''Late in the Standoff: Stories and a Novella'', page 17:
-#*: I didn’t see much connection between the Bunnies and Michelle—something '''bubbled''' her blouses, and I’d heard her whisper with my sister about training bras, but her body was angular, skinny. 
+#*: I didn’t see much connection between the Bunnies and Michelle—something '''bubbled''' her blouses, and I’d heard her whisper with my sister about training bras, but her body was angular, skinny.
 # {{lb|en|transitive}} To [[cover]] with bubbles.
 #* '''1994''', Jonathan Kellerman, ''Bad Love'', page 57:
 #*: Her mouth hung slightly open and water droplets '''bubbled''' her forehead, like oversized sweat.
@@ -365,7 +363,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 #* '''2014''', Cammie McGovern, ''Say What You Will'':
 #*: They '''bubbled''' her answers on Scantron tests, changed her sanitary napkins, helped her get in and out of the bathroom with a minimum of fuss.
 #* '''2019''', ''Crash Course for the ACT, 6th Edition: Your Last-Minute Guide to Scoring High'', page 15:
-#*: You don’t want to go back and forth between the test booklet and your answer sheet to '''bubble''' your answers. 
+#*: You don’t want to go back and forth between the test booklet and your answer sheet to '''bubble''' your answers.
 
 ====Quotations====
 * {{seeCites|en}}
