--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -22,8 +22,7 @@ From the prefix {{m|en|mini-}}.
 {{en-noun}}
 
 # A [[miniskirt]].
-#* '''2010''', Donna Freitas, ''The Possibilities of Sainthood''
-#*: All Normal Catholic Schoolgirls had creative ways of sluttifying our pure-as-the-driven-snow required attire. {{...}} Most important is rolling your skirt so that it is a virtual '''mini''' {{...}}
+#* {{quote-book|en|year=2010|author=Donna Freitas|title=The Possibilities of Sainthood|passage=All Normal Catholic Schoolgirls had creative ways of sluttifying our pure-as-the-driven-snow required attire. {{...}} Most important is rolling your skirt so that it is a virtual '''mini''' {{...}}}}
 # {{lb|en|dated}} A [[minicomputer]].
 #* '''1975''', June 25, ''Computerworld'' (page 20)
 #*: Micros will move upwards to where they have the same power and speed as today's '''minis'''.
