--- a/en/r/ratting.742038.wikitext
+++ b/en/r/ratting.742038.wikitext
@@ -18,8 +18,7 @@
 #*: The RSPCA were well aware that '''ratting''' was legally ambiguous, and when they received a report of a conviction for ratting in Hull in 1868 they doubted the legality of it.
 #* '''2008''', Benjamin G. Rader, ''Baseball: A History of America's Game'' (page 12)
 #*: Such men usually satisfied their needs for leisure in the patronage of saloons or in such “blood” sports as cockfights or '''rattings'''.
-#* '''2012''', Jan Bondeson, ''Amazing Dogs: A Cabinet of Canine Curiosities''
-#*: This was the pit for dog fights, cockfights and rat killing. {{...}} At a time when '''ratting''' was largely frowned upon by respectable people in Britain, it gained considerable support in France {{...}}
+#* {{quote-book|en|year=2012|author=Jan Bondeson|title=Amazing Dogs: A Cabinet of Canine Curiosities|passage=This was the pit for dog fights, cockfights and rat killing. {{...}} At a time when '''ratting''' was largely frowned upon by respectable people in Britain, it gained considerable support in France {{...}}}}
 # {{lb|en|uncountable}} A [[vocation]] involving the [[pest control]] of [[rats]], typically using a [[working terrier]].
 # Desertion of one's principles.
 # Working as a scab, against trade union policies.
