--- a/en/u/unsoundness.742255.wikitext
+++ b/en/u/unsoundness.742255.wikitext
@@ -7,8 +7,7 @@
 {{en-noun|~|es}}
 
 # The state of being [[unsound]].
-#* '''1951''', John Wyndham, ''The Day of the Triffids''
-#*: Most likely he was accounting for that by the bias my job might be expected to give – aggravated by a phobia resulting from my recent sting – and he was wondering whether it might connote other, perhaps less harmless, '''unsoundnesses'''.
+#* {{quote-book|en|year=1951|author=John Wyndham|title=The Day of the Triffids|passage=Most likely he was accounting for that by the bias my job might be expected to give – aggravated by a phobia resulting from my recent sting – and he was wondering whether it might connote other, perhaps less harmless, '''unsoundnesses'''.}}
 
 ====Antonyms====
 * {{l|en|soundness}}
