--- a/en/t/trick out.774631.wikitext
+++ b/en/t/trick out.774631.wikitext
@@ -8,8 +8,7 @@ Perhaps from dialectal English {{m|en|trig out||to dress smartly}}, perhaps an a
 
 # {{lb|en|informal|transitive|of a person or thing}} To [[dress]] or [[decorate]] in an especially [[fancy]], [[elaborate]], or [[excessive]] manner.
 #* {{quote-text|en|year=1869|author={{w|Mark Twain}}|title=The Innocents Abroad|chapter=50|passage=We went down a flight of fifteen steps below the ground level, and stood in a small chapel '''tricked out''' with tapestry hangings, silver lamps, and oil paintings.}}
-#* '''1883''', Stevenson, ''[[s:Treasure Island (1883)|Treasure Island]]''
-#*: He was '''tricked out''' in his best: an immense blue coat, thick with brass buttons, hung as low as to his knees, and a fine laced hat was set on the back of his head.
+#* {{quote-book|en|year=1883|author=Stevenson|title=[[s:Treasure Island (1883)|Treasure Island]]|passage=He was '''tricked out''' in his best: an immense blue coat, thick with brass buttons, hung as low as to his knees, and a fine laced hat was set on the back of his head.}}
 #* {{quote-text|en|year=1913|author={{w|John Galsworthy}}|title=The Dark Flower|chapter=6|passage=That stare was as if he saw her—a doll '''tricked out''' in garments labelled soul, spirit, rights, responsibilities, dignity, freedom—all so many words.}}
 # {{lb|en|informal|transitive|of a [[motor vehicle]], etc.}} To [[mod]] or [[customize]] an object, typically for the purposes of [[personalization]] and enhancing [[performance]] capabilities such as the ability to perform [[stunt]]s.
 #: ''His friends were particularly impressed with the way he '''tricked out''' his [[wikipedia:Honda_Ruckus|Ruckus]].''
