--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -226,12 +226,12 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Latin: {{t+|la|sūs|c}}, {{t+|la|porcus|m}}<!--do not put the scientific name here-->
 * Latvian: {{t+|lv|cūka|f}}
 * Ledo Kaili: {{t-check|lew|bavu}}
-{{trans-mid}}
 * Limburgish: {{t+|li|zwien}}, {{t+|li|verke}}
 * Lithuanian: {{t+|lt|kiaulė|f}}
 * Livonian: {{t|liv|sigā}}
 * Low German: {{t+|nds|Swien|n}}
 * Ludian: {{t|lud|šiga}}
+{{trans-mid}}
 * Luganda: {{t|lg|embizzi}}
 * Lusitanian: {{t|xls|porcom}}, {{t|xls|porgom}}
 * Luxembourgish: {{t|lb|Schwäin|n}}
@@ -318,7 +318,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|swinja|f}}
 *: Upper Sorbian: {{t|hsb|swinjo|n}}
-* Spanish: {{t+|es|cerdo|m}}, {{t+|es|chancho|m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, {{t+|es|chon|m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, {{t+|es|coche|m}} {{qualifier|Guatemala}}, {{t+|es|cochi|m}} {{qualifier|Northwestern Mexico}}, {{t|es|cochín|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t+|es|cochino|m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, {{t+|es|cocho|m}} {{qualifier|Northern Spain|specifically Leon}}, {{t+|es|cuchi|m}} {{qualifier|Northern Central and Northwestern Argentina}}, {{t+|es|cuto|m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, {{t+|es|gocho|m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, {{t+|es|gorrino}} {{qualifier|Southern Central and Eastern Central Spain}}, {{t+|es|guarro|m}} {{qualifier|Western Spain|specifically Extremadura}}, {{t+|es|marrano|m}} {{qualifier|Central and Western Venezuela|Colombia}}, {{t+|es|puerco|m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, {{t+|es|tocino|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t+|es|tunco|m}} {{qualifier|El Salvador}}
+* Spanish: {{t+|es|cerdo|m}}, {{t+|es|chancho|m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, {{t+|es|chon|m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, {{t+|es|coche|m}} {{qualifier|Guatemala}}, {{t+|es|cochi|m}} {{qualifier|Northwestern Mexico}}, {{t|es|cochín|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t+|es|cochino|m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, {{t+|es|cocho|m}} {{qualifier|Northern Spain|specifically Leon}}, {{t+|es|cuchi|m}} {{qualifier|Northern Central and Northwestern Argentina}}, {{t+|es|cuto|m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, {{t+|es|gocho|m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, {{t+|es|gorrino}} {{qualifier|Southern Central and Eastern Central Spain}}, {{t+|es|guarro|m}} {{qualifier|Western Spain|specifically Extremadura}}, {{t+|es|marrano|m}} {{qualifier|Central and Western Venezuela|Colombia}}, {{t+|es|puerco|m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, {{t+|es|tocino|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t+|es|tunco|m}} {{qualifier|El Salvador}}, {{t|es|pitzote}} {{qualifier|early modern Mexico}}
 * Swahili: {{t+|sw|nguruwe}}
 * Swedish: {{t+|sv|gris|c}}, {{t+|sv|svin|n}}
 * Sylheti: {{t|syl|ꠉꠣꠠꠤꠀ|tr=garia}}
