--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -298,6 +298,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 {{trans-mid}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t+|ja|重さ|tr=omosa}}, {{t|ja|重み|tr=omomi}}
+* Malay: {{t|ms|pemberat}}
 * Portuguese: {{t+|pt|peso|m}}
 * Russian: {{t+|ru|вес|m}}
 * Scots: {{t|sco|weicht}}
