--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -218,6 +218,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Japanese: {{t|ja|重り|tr=omori}}
 * Latvian: {{t|lv|svars|m}}, {{t|lv|atsvars|m}}
 * Luxembourgish: {{t|lb|Gewiicht|n}}
+* Malay: {{t|ms|pemberat}}
 * Maori: {{t|mi|tāwē}} {{qualifier|to add to an anchor}}, {{t|mi|wēti}}, {{t|mi|taumaha}}, {{t|mi|toimaha}}
 * Old English: {{t|ang|ġewiht|n}}
 * Portuguese: {{t+|pt|peso}}
