--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -335,6 +335,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * French: {{t|fr|accident de décompression|m}}, {{t|fr|maladie des caissons|f}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|doença de descompressão|f}}
+* Swedish: {{t|sv|dykarsjuka|c}}, {{t|sv|tryckfallssjuka|c}}
 {{trans-bottom}}
 
 {{trans-top|heraldry: one of the ordinaries}}
