--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -42,8 +42,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 # {{lb|en|visual art}} The [[thickness]] and [[opacity]] of [[paint]].
 # [[pressure|Pressure]]; [[burden]].
 #: {{ux|en|the '''weight''' of care or business}}
-#* {{rfdatek|en|William Shakespeare}}
-#*: The '''weight''' of this sad time.
+#*{{RQ:Shakespeare Lear|act=V|scene=iii|passage=The '''weight''' of this sad time.}}
 #* {{rfdatek|en|John Milton}}
 #*: For the public all this '''weight''' he bears.
 # The [[resistance]] against which a [[machine]] acts, as opposed to the power which moves it.
